--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "6.0.1",
     "@angular/common": "6.0.1",
     "@angular/compiler": "6.0.1",
